fixing quote spacing

--- a/wp-content/themes/milton/sass/_new-case-studies.scss
+++ b/wp-content/themes/milton/sass/_new-case-studies.scss
@@ -73,7 +73,7 @@
 		}
 
 		.new-quote{
-			padding: 4em 5%;
+			padding: 1.6em 5%;
 			font-size: 1.4em;
 			color: $nkblue;
 
@@ -132,7 +132,7 @@
 
 		.new-quote{
 			font-size: 2em;
-			padding: 2em 5%;
+			padding: 2.6em 5%;
 			max-width: 980px;
 			margin: 0 auto;
 
